# oalab

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: conda-package-build.yml
conda/: environment.yml  meta.yaml
doc/: conf.py
example/: control_sizes.py  create_qt_control_screenshot.py  test_control_manager.py  test_drag_and_drop.py  test_model_controllers.py  test_new_layout.py  test_project_manager.py  test_qt_control.py  test_world.py
example/notebooks/: notebook_controls.ipynb  sync_widgets.ipynb  test_ipython_widgets.ipynb
example/test_project/: control.py
example/test_project/lib/: algo.py
example/test_project/model/: call_f1.py  call_f2.py  plot_x_y.py  test_manual_lpy.py
share/data/project/Fractals/model/: canopy_construct.py
share/data/project/Tuto_intro/model/: analysis.py
share/data/project/r_example/model/: r_test.py
share/data/project/tutorial_development/model/: earth.py  moon.py
share/data/project/tutorial_getting_start/model/: fibonacci.py
share/data/project/tutorial_models/: control.py
share/data/project/tutorial_models/model/: simulator.py
src/openalea/oalab/: about.py  drag_and_drop.py  interface.py  main.py  metainfo.py  painter.py  utils.py  version.py
src/openalea/oalab/colormap/: colormap_def.py  colormap_utils.py  colormaps.py
src/openalea/oalab/config/: main.py
src/openalea/oalab/control/: editor.py  manager.py  model_view.py  panel.py  qcontainer.py  selector.py  ui_editor.py  ui_widget_container.py  widget.py
src/openalea/oalab/data/project/Fractals/model/: analysis.py
src/openalea/oalab/data/project/fibonacci/model/: fibonacci_runner.py
src/openalea/oalab/data/project/getting_start/model/: extend_viewer_support.py
src/openalea/oalab/data/project/how_to_contribute/model/: extension_viewer_support.py
src/openalea/oalab/data/project/mtg/model/: walnut_load_mtg.py
src/openalea/oalab/editor/: completion.py  goto.py  highlight.py  line_number.py  plaintext_editor.py  search.py  text_editor.py
src/openalea/oalab/editor/pyeditor/: editor.py
src/openalea/oalab/fspm/: mtgimport.py
src/openalea/oalab/gui/control/: widget_tester.py
src/openalea/oalab/manager/: explorer.py  selector.py
src/openalea/oalab/mimedata/: builtin.py  exception.py  manager.py  qcodec.py
src/openalea/oalab/model/: __init__.py  parse.py  r.py  visualea.py
src/openalea/oalab/package/: treeview.py  widgets.py
src/openalea/oalab/paradigm/: __init__.py  container.py  controller.py  creator.py  python.py
src/openalea/oalab/plot2d/: __init__.py  figurewidget.py  mplwidget.py
src/openalea/oalab/plugin/builtin/: applet.py
src/openalea/oalab/plugin/builtin/lab/: default.py  minilab.py
src/openalea/oalab/plugin/builtin/oalab/: control.py  project.py  visualea_control.py
src/openalea/oalab/plugin/oalab/: control.py
src/openalea/oalab/pluginwidget/: explorer.py
src/openalea/oalab/project/: creator.py  dialog.py  explorer.py  preview.py  projectbrowser.py  projecteditor.py  qtmodel.py  symlink.py
src/openalea/oalab/qt/: compat.py
src/openalea/oalab/resources/: __init__.py
src/openalea/oalab/service/: applet.py  geometry.py  help.py  notebook_control.py  paradigm.py  qt_control.py
src/openalea/oalab/shell/: ipython.py  scishell.py  shell.py  shellwidget.py  streamredirection.py
src/openalea/oalab/testing/: applet.py  drag_and_drop.py  qtunittest.py
src/openalea/oalab/widget/: basic.py  browser.py  colormap.py  help.py  history.py  menu.py  model.py  pages.py  preferences.py  splashscreen.py  splittablewindow.py  splitterui.py  switcher.py  world.py
src/openalea/oalab/widget/control/: constraint.py  control.py
src/openalea/oalab_wralea/: oalabnode.py
test/: test_parse_function.py  test_parse_model.py
test/qt/: test_drag_and_drop.py  test_paradigm_editor.py  test_qt_controls.py
